--- a/index.html
+++ b/index.html
@@ -175,140 +175,142 @@
                             <img src="img/mexc.svg" alt="">
                         </a>
                     </div> -->
-                    <div class="theme-toggle-btn-block">
-                        <button class="theme-toggle-btn">
-                            <img src="img/theme-light.svg" alt="">
-                        </button>
-                    </div>
-                    <div class="buy-pros-select-block">
-                        <div class="btn-group buy-pros-dropdown">
-                            <button type="button" class="buy-pros-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img class="cart-mob" src="img/buy_token.svg" alt="">
-                                <span class="acc-label">Buy $PROPS</span>
+                    <div class="header-btn-cover">
+                        <div class="theme-toggle-btn-block">
+                            <button class="theme-toggle-btn">
+                                <img src="img/theme-light.svg" alt="">
                             </button>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li>
-                                    <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
-                                        <span class="icon">
-                                            <img src="img/pros-mex.svg" alt="">
-                                        </span> MEXC
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
-                                        <span class="icon">
-                                            <img src="img/pros-pan.svg" alt="">
-                                        </span> Pancake
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
-                                        <span class="icon">
-                                            <img src="img/coin-liquid.svg" alt="">
-                                        </span> Liquidswap
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item item-disbaled" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
-                                        <span class="icon">
-                                            <img src="img/coin-chaing.svg" alt="">
-                                        </span> Chainge Finance
-                                    </a>
-                                </li>
-                            </ul>
                         </div>
-                    </div>
-                    <!-- <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button> -->
-                    <div class="wallet-btn-cover wallet-btn-cover-web">
-                        <!-- <button class="wallet-btn" data-bs-toggle="modal" data-bs-target="#walletModal">Connect Wallet</button> -->
-                        <button class="wallet-btn wallet-btn-connected" data-bs-toggle="modal" data-bs-target="#walletModal">0xf7e2...1380bf</button>
-                        <button class="wallet-btn-copy copy-btn">
-                            <img src="img/copy.svg" alt="">
-                        </button>
-                    </div>
-                    <!-- <button class="login-btn header-btn-web"><span class="acc-label">Admin Login</span> <img src="img/user.svg" alt=""></button> -->
-                    <!-- Admin btn -->
-                    <div class="admin-h-btn-block d-flex">
-                        <div class="btn-group notify-dropdown">
-                            <button type="button" class="notify-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="notify-icon">
-                                    <img src="img/notification.svg" alt="">
-                                    <span class="new"></span>
-                                </span>
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li class="notify-title">
-                                    Notifications
-                                    <span class="count">10</span>
-                                </li>
-                                <li class="dropdown-scrl-li">
-                                    <div class="dropdown-item-cover custom-scroll">
-                                        <button class="dropdown-item unread" type="button">
-                                            <div class="icon">
-                                                <img src="img/notf-logo.svg" alt="">
-                                            </div>
-                                            <div class="det">
-                                                <p><b>Staking period is over</b> for long term stake.</p>
-                                                <div class="time">6 minutes ago</div>
-                                            </div>
-                                        </button>
-                                        <button class="dropdown-item" type="button">
-                                            <div class="icon">
-                                                <img src="img/notf-logo.svg" alt="">
-                                            </div>
-                                            <div class="det">
-                                                <p><b>Staking period is over</b> for long term stake.</p>
-                                                <div class="time">6 minutes ago</div>
-                                            </div>
-                                        </button>
-                                        <button class="dropdown-item unread" type="button">
-                                            <div class="icon">
-                                                <img src="img/notf-logo.svg" alt="">
-                                            </div>
-                                            <div class="det">
-                                                <p><b>Staking period is over</b> for long term stake.</p>
-                                                <div class="time">6 minutes ago</div>
-                                            </div>
-                                        </button>
-                                        <button class="dropdown-item" type="button">
-                                            <div class="icon">
-                                                <img src="img/notf-logo.svg" alt="">
-                                            </div>
-                                            <div class="det">
-                                                <p><b>Staking period is over</b> for long term stake.</p>
-                                                <div class="time">6 minutes ago</div>
-                                            </div>
-                                        </button>
-                                        <button class="dropdown-item" type="button">
-                                            <div class="icon">
-                                                <img src="img/notf-logo.svg" alt="">
-                                            </div>
-                                            <div class="det">
-                                                <p><b>Staking period is over</b> for long term stake.</p>
-                                                <div class="time">6 minutes ago</div>
-                                            </div>
-                                        </button>
-                                    </div>
-                                </li>
-                            </ul>
+                        <div class="buy-pros-select-block">
+                            <div class="btn-group buy-pros-dropdown">
+                                <button type="button" class="buy-pros-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img class="cart-mob" src="img/buy_token.svg" alt="">
+                                    <span class="acc-label">Buy $PROPS</span>
+                                </button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li>
+                                        <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
+                                            <span class="icon">
+                                                <img src="img/pros-mex.svg" alt="">
+                                            </span> MEXC
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                            <span class="icon">
+                                                <img src="img/pros-pan.svg" alt="">
+                                            </span> Pancake
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                            <span class="icon">
+                                                <img src="img/coin-liquid.svg" alt="">
+                                            </span> Liquidswap
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item item-disbaled" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                            <span class="icon">
+                                                <img src="img/coin-chaing.svg" alt="">
+                                            </span> Chainge Finance
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-
-                        <div class="btn-group my-acc-dropdown">
-                            <button type="button" class="my-acc-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="img/admin-settings.svg" alt=""> <span class="acc-label">My Account</span>
+                        <!-- <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button> -->
+                        <div class="wallet-btn-cover wallet-btn-cover-web">
+                            <!-- <button class="wallet-btn" data-bs-toggle="modal" data-bs-target="#walletModal">Connect Wallet</button> -->
+                            <button class="wallet-btn wallet-btn-connected" data-bs-toggle="modal" data-bs-target="#walletModal">0xf7e2...1380bf</button>
+                            <button class="wallet-btn-copy copy-btn">
+                                <img src="img/copy.svg" alt="">
                             </button>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li>
-                                    <button class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
-                                        <img src="img/lock-drpdown.svg" alt=""> Change password
-                                    </button>
-                                </li>
-                                <li>
-                                    <button class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
-                                        <img src="img/logout-drpdwn.svg" alt=""> Logout
-                                    </button>
-                                </li>
-                            </ul>
+                        </div>
+                        <!-- <button class="login-btn header-btn-web"><span class="acc-label">Admin Login</span> <img src="img/user.svg" alt=""></button> -->
+                        <!-- Admin btn -->
+                        <div class="admin-h-btn-block d-flex">
+                            <div class="btn-group notify-dropdown">
+                                <button type="button" class="notify-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <span class="notify-icon">
+                                        <img src="img/notification.svg" alt="">
+                                        <span class="new"></span>
+                                    </span>
+                                </button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li class="notify-title">
+                                        Notifications
+                                        <span class="count">10</span>
+                                    </li>
+                                    <li class="dropdown-scrl-li">
+                                        <div class="dropdown-item-cover custom-scroll">
+                                            <button class="dropdown-item unread" type="button">
+                                                <div class="icon">
+                                                    <img src="img/notf-logo.svg" alt="">
+                                                </div>
+                                                <div class="det">
+                                                    <p><b>Staking period is over</b> for long term stake.</p>
+                                                    <div class="time">6 minutes ago</div>
+                                                </div>
+                                            </button>
+                                            <button class="dropdown-item" type="button">
+                                                <div class="icon">
+                                                    <img src="img/notf-logo.svg" alt="">
+                                                </div>
+                                                <div class="det">
+                                                    <p><b>Staking period is over</b> for long term stake.</p>
+                                                    <div class="time">6 minutes ago</div>
+                                                </div>
+                                            </button>
+                                            <button class="dropdown-item unread" type="button">
+                                                <div class="icon">
+                                                    <img src="img/notf-logo.svg" alt="">
+                                                </div>
+                                                <div class="det">
+                                                    <p><b>Staking period is over</b> for long term stake.</p>
+                                                    <div class="time">6 minutes ago</div>
+                                                </div>
+                                            </button>
+                                            <button class="dropdown-item" type="button">
+                                                <div class="icon">
+                                                    <img src="img/notf-logo.svg" alt="">
+                                                </div>
+                                                <div class="det">
+                                                    <p><b>Staking period is over</b> for long term stake.</p>
+                                                    <div class="time">6 minutes ago</div>
+                                                </div>
+                                            </button>
+                                            <button class="dropdown-item" type="button">
+                                                <div class="icon">
+                                                    <img src="img/notf-logo.svg" alt="">
+                                                </div>
+                                                <div class="det">
+                                                    <p><b>Staking period is over</b> for long term stake.</p>
+                                                    <div class="time">6 minutes ago</div>
+                                                </div>
+                                            </button>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+    
+                            <div class="btn-group my-acc-dropdown">
+                                <button type="button" class="my-acc-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img src="img/admin-settings.svg" alt=""> <span class="acc-label">My Account</span>
+                                </button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li>
+                                        <button class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
+                                            <img src="img/lock-drpdown.svg" alt=""> Change password
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                            <img src="img/logout-drpdwn.svg" alt=""> Logout
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
