header setting btn

--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
     
                             <div class="btn-group my-acc-dropdown">
                                 <button type="button" class="my-acc-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="img/admin-settings.svg" alt=""> <span class="acc-label">My Account</span>
+                                    <span class="acc-icon"><img src="img/admin-settings.svg" alt=""></span>
+                                    <span class="acc-label">My Account</span>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end">
                                     <li>
