--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 </div>
                 <div class="right-block">
                     <div class="info-block">
-                        <span class="info-val">$0.0035</span>
                         <span class="info-label">$Props: </span>
+                        <span class="info-val">$0.0035</span>
                         <span class="info-val info-val-end pros-val pros-val-down">
                             <img src="img/pros-dwn.svg" alt=""> 03.54%
                         </span>
@@ -237,14 +237,15 @@
                                         <span class="new"></span>
                                     </span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-end">
+                                <ul class="dropdown-menu dropdown-menu-end show" style="right: 0;">
                                     <li class="notify-title">
                                         Notifications
                                         <span class="count">10</span>
+                                        <button class="notify-clr-btn">Clear All</button>
                                     </li>
                                     <li class="dropdown-scrl-li">
                                         <div class="dropdown-item-cover custom-scroll">
-                                            <button class="dropdown-item unread" type="button">
+                                            <div class="dropdown-item unread">
                                                 <div class="icon">
                                                     <img src="img/notf-logo.svg" alt="">
                                                 </div>
@@ -252,8 +253,10 @@
                                                     <p><b>Staking period is over</b> for long term stake.</p>
                                                     <div class="time">6 minutes ago</div>
                                                 </div>
-                                            </button>
-                                            <button class="dropdown-item" type="button">
+                                                <button class="notify-close-btn"><img src="img/notify-close.svg" alt=""></button>
+                                            </div>
+                                            <div class="dropdown-item">
+                                                <button class="notify-close-btn"><img src="img/notify-close.svg" alt=""></button>
                                                 <div class="icon">
                                                     <img src="img/notf-logo.svg" alt="">
                                                 </div>
@@ -261,8 +264,9 @@
                                                     <p><b>Staking period is over</b> for long term stake.</p>
                                                     <div class="time">6 minutes ago</div>
                                                 </div>
-                                            </button>
-                                            <button class="dropdown-item unread" type="button">
+                                            </div>
+                                            <div class="dropdown-item unread">
+                                                <button class="notify-close-btn"><img src="img/notify-close.svg" alt=""></button>
                                                 <div class="icon">
                                                     <img src="img/notf-logo.svg" alt="">
                                                 </div>
@@ -270,8 +274,9 @@
                                                     <p><b>Staking period is over</b> for long term stake.</p>
                                                     <div class="time">6 minutes ago</div>
                                                 </div>
-                                            </button>
-                                            <button class="dropdown-item" type="button">
+                                            </div>
+                                            <div class="dropdown-item">
+                                                <button class="notify-close-btn"><img src="img/notify-close.svg" alt=""></button>
                                                 <div class="icon">
                                                     <img src="img/notf-logo.svg" alt="">
                                                 </div>
@@ -279,8 +284,9 @@
                                                     <p><b>Staking period is over</b> for long term stake.</p>
                                                     <div class="time">6 minutes ago</div>
                                                 </div>
-                                            </button>
-                                            <button class="dropdown-item" type="button">
+                                            </div>
+                                            <div class="dropdown-item">
+                                                <button class="notify-close-btn"><img src="img/notify-close.svg" alt=""></button>
                                                 <div class="icon">
                                                     <img src="img/notf-logo.svg" alt="">
                                                 </div>
@@ -288,7 +294,7 @@
                                                     <p><b>Staking period is over</b> for long term stake.</p>
                                                     <div class="time">6 minutes ago</div>
                                                 </div>
-                                            </button>
+                                            </div>
                                         </div>
                                     </li>
                                 </ul>
