--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                         <span class="new"></span>
                                     </span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-end show" style="right: 0;">
+                                <ul class="dropdown-menu dropdown-menu-end">
                                     <li class="notify-title">
                                         Notifications
                                         <span class="count">10</span>
