--- a/email/daily-notification-email.html
+++ b/email/daily-notification-email.html
@@ -268,7 +268,7 @@
                                 <td class="body-td" style="background: #fff; padding: 40px; border-top: solid 5px #C9C9C9;">
                                     <h4 style="font-family: 'Poppins', sans-serif; color: #292D32; font-size: 20px; font-weight: 600; margin: 0; margin-bottom: 25px;">Hi Admin,</h4>
                                     <div style="display:block; text-align: center;">
-                                        <img src="img/stake.png" alt="" width="160">
+                                        <img src="img/daily-report.png" alt="" width="160">
                                     </div>
                                     <p style="font-family: 'Poppins', sans-serif; color: #000 !important; font-size: 14px; margin-top: 30px; margin-bottom: 30px; line-height: 2;">
                                         We wanted to inform you that a user has recently made a stake in <span style="font-weight: 600;">[Stake Name]</span> on our platform.
