--- a/email/daily-notification-email.html
+++ b/email/daily-notification-email.html
@@ -271,7 +271,7 @@
                                         <img src="img/daily-report.png" alt="" width="160">
                                     </div>
                                     <p style="font-family: 'Poppins', sans-serif; color: #000 !important; font-size: 14px; margin-top: 30px; margin-bottom: 30px; line-height: 2;">
-                                        We wanted to inform you that a user has recently made a stake in <span style="font-weight: 600;">[Stake Name]</span> on our platform.
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <span style="font-weight: 600;">[Date]</span> incididunt ut labore et dolore magna aliqua.
                                     </p>
                                     <div style="box-sizing: border-box; width: 100%; margin-top: 20px;">
                                         <table style="width: 100%;font-family: 'Poppins', sans-serif; word-break: break-word;">
