portfolio staking feedback

--- a/potfolio - white.html
+++ b/potfolio - white.html
@@ -162,7 +162,6 @@
             </div>
 
             <div class="body-content-outer">
-                
                 <div class="property-listing-cover">
                     <div class="filter-wrapper d-flex">
                         <div class="block-left">
@@ -325,6 +324,29 @@
                                         </div>
                                     </div>
 
+                                </div>
+                            </div>
+
+                            <div class="portfolio-card-sm">
+                                <div class="label-block">
+                                    <div class="icon">
+                                        <img src="img/group-1.svg" alt="">
+                                    </div>
+                                    Total Holders
+                                </div>
+                                <div class="num-block">
+                                    1,821
+                                </div>
+                            </div>
+                            <div class="portfolio-card-sm">
+                                <div class="label-block">
+                                    <div class="icon">
+                                        <img src="img/portfolio-crd-1.svg" alt="">
+                                    </div>
+                                    Total Transactions
+                                </div>
+                                <div class="num-block">
+                                    38,026
                                 </div>
                             </div>
                         </div>
