--- a/staking.html
+++ b/staking.html
@@ -244,7 +244,7 @@
                         <!-- No data -->
                         <div class="table-no-data w-100">
                             <div class="img-block">
-                                <img src="img/no-pools-dark.svg" alt="" class="no-data-img">
+                                <img src="img/no-pools-light.svg" alt="" class="no-data-img">
                                 <img src="img/no-pools-dark.svg" alt="" class="no-data-img d-none">
                             </div>
                             <p>No Upcoming Staking Pools</p>
